small change in wording

--- a/assignments/Assignment2.ipynb
+++ b/assignments/Assignment2.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "## Assignment 2B: One scatter plot and two datasets\n",
     "\n",
-    "This scatter plot visualization should pull data from an associated CSV/JSON file (it's easiest to use Python to generate a nicely formatted file that contains _only the data you need for the visualization_). You should use appropriate dynamic scales (see chapter 7 of IDV). Additional requirements for the visualizations are listed below\n",
+    "We will be visualizing SF crime data (the same dataset we've used in all the exerciese). This scatter plot visualization should pull data from an associated CSV/JSON file (it's easiest to use Python to generate a nicely formatted file that contains _only the data you need for the visualization_). You should use appropriate dynamic scales (see chapter 7 of IDV). Additional requirements for the visualizations are listed below\n",
     "\n",
     "* Each point should correspond to a district\n",
     "* Points should be labeled\n",
@@ -75,7 +75,7 @@
     "\n",
     "This barchart visualization should also pull data from an associated CSV/JSON file. Here, Once again, you should use appropriate dynamic scales (see chapter 7 of IDV). Additional requirements for the visualizations are listed below\n",
     "\n",
-    "* This visualization consists of one histogram, which is able to switch between at least two datasets. You get to choose something interesting from Week 3.\n",
+    "* This visualization consists of one histogram, which is able to switch between at least two datasets. You get to choose something interesting from Week 3's exercises.\n",
     "* Click on something to toggle between the two (or more) datasets.\n",
     "* Feel free to color and label according to your own taste."
    ]
