--- a/assignments/Assignment2.ipynb
+++ b/assignments/Assignment2.ipynb
@@ -63,7 +63,7 @@
     "* The $x$-axis should correspond to total number of `PROSTITUTION` incidents\n",
     "* The $y$-axis should correspond to total number of `VEHICLE THEFT` incidents\n",
     "* Click on something (your choice) to toggle between data from 2003 and 2015 - there must be a smooth transition. \n",
-    "* Axes should not change but fit data from both years.\n",
+    "* Axes should not change but fit data from both years (e.g. when setting up the dynamic scales, the max values should be set by taking both datasets into arrount).\n",
     "* Explain in your own words why you think I want the axes to be the same for both years? (Even though you know how to make axes adapt to the data values.)"
    ]
   },
